--- a/learning/courses/quantum-business-foundations/index.mdx
+++ b/learning/courses/quantum-business-foundations/index.mdx
@@ -19,6 +19,6 @@ To earn your Quantum business foundations badge, take the exam at IBM Training l
 
 ### Credly
 
-IBM leverages the services of Credly, a 3rd party data processor authorized by IBM and located in the United States, to assist in the administration of the IBM Digital Badge program. In order to issue you an IBM Digital Badge, your personal information (name, email address, and badge earned) will be shared with Credly.
+IBM leverages the services of Credly, a third-party data processor authorized by IBM and located in the United States, to assist in the administration of the IBM Digital Badge program. In order to issue you an IBM Digital Badge, your personal information (name, email address, and badge earned) will be shared with Credly.
 
 !["Hero image"](/learning/images/courses/quantum-business-foundations/badge.avif)
