--- a/learning/courses/quantum-business-foundations/quantum-technology.mdx
+++ b/learning/courses/quantum-business-foundations/quantum-technology.mdx
@@ -18,23 +18,21 @@ By the end of this module, you should be able to:
 
 ### IBM Quantum Platform
 
-IBM Quantum provides a suite of quantum computing tools that brings together all of the research and development resources that users need to do great work, in one place.
+IBM Quantum Platform provides a suite of quantum computing tools that brings together all of the research and development resources that users need to do great work, in one place. Users can create an account and sign in to get access to IBM quantum computers, view computer details, track workloads, and access enablement material in Documentation and Learning.
 
-* [IBM Quantum Platform](https://quantum.cloud.ibm.com) serves as the primary access point for the product ecosystem, where users can get their API keys, track jobs, and compare QPUs (quantum processing units). From the Platform dashboard, users will find a summary of their access details, in addition to links for helpful destinations across the other apps, including featured courses, documentation resources, and links to learning tools.
-* [IBM Quantum Documentation](/docs) aggregates Qiskit documentation, service documentation, API reference information, and tutorials into one location, organized in a way that supports users' natural workflows.
-* [IBM Quantum Learning](/learning) is the home for educational material and experimentation tools, and is designed to help get users up to speed on various quantum computing topics and use cases.
+* [Home page](https://quantum.cloud.ibm.com/) serves as the primary starting point for the product ecosystem, where users can get their API keys, view a summary of their instances and usage information, view recent job details, and access helpful links to other places across platform.
+* [Documentation](/docs) aggregates Qiskit documentation, service documentation, and API reference information into one location, organized in a way that supports users' natural workflows.
+* [Learning](/learning) is the home for educational material including courses and teaching modules, and the interactive [Circuit Composer] (add link). This combination graphical and code editor allows users to prototype, simulate, and debug circuits visually, and then run them on IBM quantum computers.
 
-### Qiskit Runtime on IBM Cloud
+### Qiskit Runtime
 
 Qiskit Runtime is a portable, secure, containerized architecture that runs quantum programs on a classical computing unit tightly integrated with the quantum processor. Qiskit Runtime allows the quantum computer to become a part of any computing environment to accelerate computation—similar to a graphics processing unit (GPU)—and handles the job orchestration and data transfer to the quantum processing unit, maximizing efficiency.
 
-Qiskit and Qiskit Runtime make it simple to quickly orchestrate programs across compute resources on the cloud. IBM builds middleware for quantum to maximize the performance of quantum applications running across parallelized, cloud-based, quantum and classical computational resources. This middleware includes the **circuit knitting** toolbox and our **quantum serverless** architecture.
+Qiskit and Qiskit Runtime make it simple to quickly orchestrate programs across compute resources on the cloud. IBM builds middleware for quantum to maximize the performance of quantum applications running across parallelized, cloud-based, quantum and classical computational resources. This middleware includes the circuit knitting toolbox and our quantum serverless architecture.
 
-* The Circuit knitting toolbox allows developers to cut large circuits into smaller circuits suitable for current quantum computers. Circuit knitting uses classical computation to take on some of the computational burden of a quantum circuit to exceed what we can achieve with either alone. Additional tools help reconstruct circuits with classical resources and stitch together final results.
+The [circuit cutting Qiskit addon](https://pypi.org/project/circuit-knitting-toolbox/) allows developers to cut large circuits into smaller circuits suitable for current quantum computers. Circuit knitting uses classical computation to take on some of the computational burden of a quantum circuit to exceed what we can achieve with either alone. Additional tools help reconstruct circuits with classical resources and stitch together final results.
 
-* The Quantum Serverless library is a multi-cloud orchestration toolkit to connect elastic classical resources with the IBM Qiskit Runtime service. Quantum serverless allows developers to focus on the code, rather than resource provisioning.
-
-We demonstrated a 120x speedup in simulating molecules thanks to a host of improvements, including the ability to run quantum programs entirely on the cloud with Qiskit Runtime. Read more: [IBM Quantum delivers 120x speedup of quantum workloads](https://research.ibm.com/blog/120x-quantum-speedup).
+[Quantum Serverless](/docs/guides/serverless) is a multi-cloud orchestration toolkit to connect elastic classical resources with the IBM Qiskit Runtime service. Quantum serverless allows developers to focus on the code, rather than resource provisioning.
 
 ### IBM's superconducting quantum computers
 
@@ -175,6 +173,3 @@ You can keep these key takeaways in mind:
 * To measure the performance of quantum computers, there are four key metrics: scale, quality, speed, and layer fidelity.
 * A joint IBM Quantum-UC Berkeley experiment presented evidence of IBM quantum computers delivering reliable, accurate results for challenging simulation problems at a scale of 127 qubits.
 * Quantum-centric supercomputing means treating quantum as one piece of a broader HPC paradigm with classical and quantum working as one computational unit.
-* The IBM Quantum Network website is a key resource that you can use to stay current on IBM Quantum technology and research.
-* IBM Quantum has the largest fleet of quantum computers available over the cloud.
-* IBM Quantum cloud tools allow you to accelerate your individual research by running quantum applications on the cloud.
