--- a/learning/courses/quantum-diagonalization-algorithms/index.mdx
+++ b/learning/courses/quantum-diagonalization-algorithms/index.mdx
@@ -22,10 +22,12 @@ We recommend that learners complete the following prerequisites prior to this co
 
 To earn your Quantum diagonalization algorithms badge, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
 
+[Exam](/learning/courses/quantum-diagonalization-algorithms/exam)
+
 ## Awarded Badge
+
+!["Hero image"](/learning/images/courses/quantum-diagonalization-algorithms/badge.avif)
 
 ### Credly
 
 IBM leverages the services of Credly, a 3rd party data processor authorized by IBM and located in the United States, to assist in the administration of the IBM Digital Badge program. In order to issue you an IBM Digital Badge, your personal information (name, email address, and badge earned) will be shared with Credly.
-
-!["Hero image"](/learning/images/courses/quantum-diagonalization-algorithms/badge.avif)
