--- a/learning/courses/quantum-safe-cryptography/exam.mdx
+++ b/learning/courses/quantum-safe-cryptography/exam.mdx
@@ -5,7 +5,7 @@ description: Take a 20-question exam on the IBM Training site to test your quant
 
 # Exam & badge
 
-![A square badge stating the name of this course, foundational level, and issued by IBM Quantum&reg;.](/learning/images/courses/quantum-safe-cryptography/exam/badge.svg)
+![A square badge stating the name of this course, foundational level, and issued by IBM Quantum&reg;.](/learning/images/courses/quantum-safe-cryptography/exam/badge.avif)
 
 ## Test your knowledge
 
