hero image -> badge image

--- a/learning/courses/quantum-safe-cryptography/index.mdx
+++ b/learning/courses/quantum-safe-cryptography/index.mdx
@@ -38,7 +38,7 @@ To earn your Quantum-safe cryptography badge, take the exam at IBM Training. Thi
 
 ## Awarded badge
 
-!["Badge"](/learning/images/courses/quantum-safe-cryptography/badge.avif)
+!["Image of the awarded badge"](/learning/images/courses/quantum-safe-cryptography/badge.avif)
 
 ### Credly
 
