--- a/learning/courses/basics-of-quantum-information/index.mdx
+++ b/learning/courses/basics-of-quantum-information/index.mdx
@@ -50,10 +50,8 @@ To earn your Basics of quantum information badge, take the exam at IBM Training.
 
 ## Awarded Badge
 
-!["Hero image"](/learning/images/courses/basics-of-quantum-information/badge.avif)
+!["Image of the awarded badge"](/learning/images/courses/basics-of-quantum-information/badge.avif)
 
 ### Credly
 
 IBM leverages the services of Credly, a third-party data processor authorized by IBM and located in the United States, to assist in the administration of the IBM Digital Badge program. In order to issue you an IBM Digital Badge, your personal information (name, email address, and badge earned) will be shared with Credly.
-
-!["Hero image"](/learning/images/courses/basics-of-quantum-information/badge.avif)
