--- a/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
+++ b/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
@@ -28,7 +28,7 @@ To earn your Fundamentals of quantum algorithms badge, take the exam at IBM Trai
 
 ## Awarded Badge
 
-!["Hero image"](/learning/images/courses/fundamentals-of-quantum-algorithms/badge.avif)
+!["Image of the awarded badge"](/learning/images/courses/fundamentals-of-quantum-algorithms/badge.avif)
 
 ### Credly
 
