--- a/learning/courses/quantum-business-foundations/index.mdx
+++ b/learning/courses/quantum-business-foundations/index.mdx
@@ -17,7 +17,7 @@ To earn your Quantum business foundations badge, take the exam at IBM Training l
 
 ## Awarded Badge
 
-!["Hero image"](/learning/images/courses/quantum-business-foundations/badge.avif)
+!["Image of the awarded badge"](/learning/images/courses/quantum-business-foundations/badge.avif)
 
 ### Credly
 
