--- a/learning/courses/quantum-chem-with-vqe/index.mdx
+++ b/learning/courses/quantum-chem-with-vqe/index.mdx
@@ -33,7 +33,7 @@ To earn your Quantum Chemistry with VQE badge, take the exam at IBM Training. Th
 
 ## Awarded Badge
 
-!["Hero image"](/learning/images/courses/quantum-chem-with-vqe/badge.avif)
+!["Image of the awarded badge"](/learning/images/courses/quantum-chem-with-vqe/badge.avif)
 
 ### Credly
 
