--- a/learning/courses/quantum-diagonalization-algorithms/index.mdx
+++ b/learning/courses/quantum-diagonalization-algorithms/index.mdx
@@ -26,7 +26,7 @@ To earn your Quantum diagonalization algorithms badge, take the exam at IBM Trai
 
 ## Awarded Badge
 
-!["Hero image"](/learning/images/courses/quantum-diagonalization-algorithms/badge.avif)
+!["Image of the awarded badge"](/learning/images/courses/quantum-diagonalization-algorithms/badge.avif)
 
 ### Credly
 
