--- a/learning/courses/quantum-machine-learning/index.mdx
+++ b/learning/courses/quantum-machine-learning/index.mdx
@@ -17,7 +17,7 @@ To earn your Quantum machine learning badge, take the exam at IBM Training. This
 
 ## Awarded Badge
 
-!["Hero image"](/learning/images/courses/quantum-machine-learning/badge.avif)
+!["Image of the awarded badge"](/learning/images/courses/quantum-machine-learning/badge.avif)
 
 ### Credly
 
