--- a/learning/courses/quantum-machine-learning/index.mdx
+++ b/learning/courses/quantum-machine-learning/index.mdx
@@ -11,7 +11,7 @@ This course explores how quantum computing can play an exciting role in machine 
 
 ## Exam
 
-To earn your Quantum machine learning badge, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
+To earn your badge for Quantum machine learning, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
 
 [Exam](/learning/courses/quantum-machine-learning/exam)
 
