--- a/learning/courses/utility-scale-quantum-computing/index.mdx
+++ b/learning/courses/utility-scale-quantum-computing/index.mdx
@@ -7,4 +7,4 @@ description: A free IBM course on building a foundational understanding of quant
 
 !["Hero image"](/learning/images/courses/utility-scale-quantum-computing/hero.svg)
 
-This event replay course consists of 14 lessons and labs developed and run by IBM Quantum&reg; in collaboration with the University of Tokyo. Each lesson consists of a PDF of a lecture-style presentation as well as a computing lab. Both can both be downloaded from within each lesson page, and the page itself displays the coding lab. These lessons cover a wide variety of important topics in quantum computing, but they are focused on building toward a utility-scale calculation. The result is very similar to work published on the cover of Nature in June 2023.
+This event replay course consists of 14 lessons and labs developed and run by IBM Quantum&reg; in collaboration with the University of Tokyo. These lessons cover a wide variety of important topics in quantum computing, but they are focused on building toward a utility-scale calculation. The result is very similar to work published on the cover of Nature in June 2023.
