--- a/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
+++ b/learning/courses/fundamentals-of-quantum-algorithms/index.mdx
@@ -5,6 +5,8 @@ description: Learn how quantum computers can efficiently solve problems, includi
 
 # Overview
 
+!["Hero image"](/learning/images/courses/fundamentals-of-quantum-algorithms/hero.svg)
+
 Welcome to *Fundamentals of Quantum Algorithms,* the second course in the *Understanding Quantum Information and Computation* series comprising the following courses:
 
 - [Basics of quantum information](/learning/courses/basics-of-quantum-information/index)
@@ -17,3 +19,17 @@ It begins with quantum query algorithms, which offer simple proof-of-concept dem
 including integer factorization and unstructured search.
 
 This course is intended for students, professionals, and hobbyists in fields such as computer science, physics, engineering, and mathematics who are eager to gain knowledge on the theoretical foundations of quantum information and computation.
+
+## Exam
+
+To earn your badge for Fundamentals of quantum algorithms, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
+
+[Exam](/learning/courses/fundamentals-of-quantum-algorithms/exam)
+
+## Awarded Badge
+
+!["Image of the awarded badge"](/learning/images/courses/fundamentals-of-quantum-algorithms/badge.avif)
+
+### Credly
+
+IBM leverages the services of Credly, a third-party data processor authorized by IBM and located in the United States, to assist in the administration of the IBM Digital Badge program. In order to issue you an IBM Digital Badge, your personal information (name, email address, and badge earned) will be shared with Credly.
