--- a/learning/courses/quantum-chem-with-vqe/exam.mdx
+++ b/learning/courses/quantum-chem-with-vqe/exam.mdx
@@ -5,7 +5,7 @@ description: Take a 20-question exam to test your quantum chemistry skills and r
 
 # Exam & badge
 
-![A square badge stating the name of this course, intermediate level, and issued by IBM Quantum&reg;.](/learning/images/courses/quantum-chem-with-vqe/exam/badge.svg)
+![A square badge stating the name of this course, intermediate level, and issued by IBM Quantum&reg;.](/learning/images/courses/quantum-chem-with-vqe/exam/badge.avif)
 
 ## Test your knowledge
 
