--- a/learning/courses/quantum-safe-cryptography/index.mdx
+++ b/learning/courses/quantum-safe-cryptography/index.mdx
@@ -14,20 +14,6 @@ This course was created for developers who are interested in modernizing their a
 
 By taking this course, developers will learn how the cybersecurity risk landscape is evolving as well as explore contemporary approaches poised to shape the quantum era.
 
-## Exam
-
-[Exam](/learning/courses/quantum-safe-cryptography/exam)
-
-## Awarded badge
-
-### Credly
-
-IBM&reg; leverages the services of Credly, a third-party data processor authorized by IBM and located in the United States, to assist in the administration of the IBM Digital Badge program. In order to issue you an IBM Digital Badge, your personal information (name, email address, and badge earned) will be shared with Credly.
-
-You will receive an email notification from Credly with instructions for claiming the badge. Your personal information is used to issue your badge and for program reporting and operational purposes. IBM may share the personal information collected with IBM subsidiaries and third parties globally. It will be handled in a manner consistent with [IBM Privacy Statement](https://www.ibm.com/privacy/us/en/).
-
-!["Badge"](/learning/images/courses/quantum-safe-cryptography/badge.avif)
-
 ## Helpful materials
 
 <Admonition type="note">
@@ -43,4 +29,21 @@ PDFs of lecture notes will be available soon
 - [IBM Quantum Safe](https://www.ibm.com/quantum/quantum-safe)
 - [Why it’s time to take quantum-safe cryptography seriously](https://research.ibm.com/blog/quantum-safe-cryptography-for-industry)
 - [Fundamentals of Encryption & Quantum-Safe Techniques](https://catalog.skills.network/2766)
+
+## Exam
+
+To earn your Quantum-safe cryptography badge, take the exam at IBM Training. This exam is intended to be taken after reading the lessons in this course. After you pass the exam, you will be notified by Credly that you have earned a badge.
+
+[Exam](/learning/courses/quantum-safe-cryptography/exam)
+
+## Awarded badge
+
+!["Image of the awarded badge"](/learning/images/courses/quantum-safe-cryptography/badge.avif)
+
+### Credly
+
+IBM&reg; leverages the services of Credly, a third-party data processor authorized by IBM and located in the United States, to assist in the administration of the IBM Digital Badge program. In order to issue you an IBM Digital Badge, your personal information (name, email address, and badge earned) will be shared with Credly.
+
+
+
 
