--- a/learning/courses/variational-algorithm-design/exam.mdx
+++ b/learning/courses/variational-algorithm-design/exam.mdx
@@ -5,7 +5,7 @@ description: Take a 20-question exam to test your quantum chemistry skills and r
 
 # Exam & badge
 
-![A square badge stating the name of this course, advanced level, and issued by IBM Quantum&reg;.](/learning/images/courses/variational-algorithm-design/exam/badge.svg)
+![A square badge stating the name of this course, advanced level, and issued by IBM Quantum&reg;.](/learning/images/courses/variational-algorithm-design/exam/badge.avif)
 
 ## Test your knowledge
 
