--- a/learning/courses/variational-algorithm-design/cost-functions.ipynb
+++ b/learning/courses/variational-algorithm-design/cost-functions.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "- First, we'll learn about [Qiskit Runtime primitives](/docs/guides/primitives)\n",
     "- Define a *cost function* $C(\\vec\\theta)$. This is a problem-specific function that defines the problem's goal for the optimizer to minimize (or maximize)\n",
-    "- Defining a measurement strategy with the Qiskit Runtime primitives to optimize speed vs accuracy\n",
+    "- Defining a measurement strategy with the Qiskit Runtime primitives to optimize speed versus accuracy\n",
     "\n",
     "&nbsp;\n",
     "\n",
