2nd course review (#3341)
closes #3338

---------

Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>
Co-authored-by: Chris Porter <christopher.porter1@ibm.com>
Co-authored-by: abbycross <across@us.ibm.com>
Co-authored-by: christopherporter1 <125992427+christopherporter1@users.noreply.github.com>

--- a/learning/courses/quantum-diagonalization-algorithms/skqd.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/skqd.ipynb
@@ -17,10 +17,10 @@
    "source": [
     "This lesson on Sample-based quantum diagonalization (SKQD) combines methods explained in previous methods. It consists of a single example leveraging the Qiskit patterns framework:\n",
     "\n",
-    "- Step 1: Map problem to quantum circuits and operators\n",
-    "- Step 2: Optimize for target hardware\n",
-    "- Step 3: Execute using Qiskit Primitives\n",
-    "- Step 4: Post-process\n",
+    "    - Step 1: Map problem to quantum circuits and operators\n",
+    "    - Step 2: Optimize for target hardware\n",
+    "    - Step 3: Execute using Qiskit Primitives\n",
+    "    - Step 4: Post-process\n",
     "\n",
     "An important step in the sample-based quantum diagonalization method is to generate quality vectors for the subspace. In the previous lesson, we used the LUCJ ansatz to generate subspace vectors for a chemistry Hamiltonian. In this lesson, we will use quantum Krylov states[\\[1\\]](#references) as was discussed in lesson 2. First, we will review how to create the Krylov space on a quantum computer using time evolution operations. We will then sample from it. We will project the system Hamiltonian onto the sampled subspace and diagonalize it to estimate the ground state energy. The algorithm provably and efficiently converges to the ground state, under the assumptions described in lesson 2.\n",
     "\n",
@@ -135,7 +135,7 @@
    "id": "6952aaf2-c598-4ce9-8dc5-e63f0725de10",
    "metadata": {},
    "source": [
-    "Finally, we need to map the time evolution operator to a quantum circuit. This was done in lesson 2, but here we will leverage methods in Qiskit, specifically a method named _synthesis_. There are different methods to synthesize mathematical operators to quantum circuits with quantum gates. Many such techniques are available in [Qiskit synthesis module](https://docs.quantum.ibm.com/api/qiskit/synthesis). We will use the [`LieTrotter`](https://docs.quantum.ibm.com/api/qiskit/qiskit.synthesis.LieTrotter) approach for synthesis [\\[3\\]](#references) [\\[4\\]](#references)."
+    "Finally, we need to map the time evolution operator to a quantum circuit. This was done in lesson 2, but here we will leverage methods in Qiskit, specifically a method named _synthesis_. There are different methods to synthesize mathematical operators to quantum circuits with quantum gates. Many such techniques are available in [Qiskit synthesis module](/docs/api/qiskit/synthesis). We will use the [`LieTrotter`](/docs/api/qiskit/qiskit.synthesis.LieTrotter) approach for synthesis [\\[3\\]](#references) [\\[4\\]](#references)."
    ]
   },
   {
@@ -494,8 +494,10 @@
     "__Answer:__\n",
     "\n",
     "There may be other valid answers, but complete answers should include the following:\n",
-    "(a) SKQD comes with convergence guarantees that SQD does not. In SQD you either need to make a very good guess for your ansatz that has excellent overlap with the ground state support in the computational basis, or you need to introduce a variational component to the calculation to sample a family of ansaetze.\n",
-    "(b) SKQD requires much less QPU time, because it avoids the costly calculation of matrix elements via the Hadamard test."
+    "\n",
+    "   (a) SKQD comes with convergence guarantees that SQD does not. In SQD you either need to make a very good guess for your ansatz that has excellent overlap with the ground state support in the computational basis, or you need to introduce a variational component to the calculation to sample a family of ansaetze.\n",
+    "\n",
+    "   (b) SKQD requires much less QPU time, because it avoids the costly calculation of matrix elements via the Hadamard test."
    ]
   },
   {
