--- a/learning/courses/utility-scale-quantum-computing/quantum-simulation.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/quantum-simulation.ipynb
@@ -320,7 +320,7 @@
     "### 2.4 Prepare the quantum circuit 2 (Single circuit for time evolution)\n",
     "We here construct a circuit for a single time step using Lie–Trotter.\n",
     "\n",
-    "The Lie product formula (first order) is implemented in the [LieTrotter](https://docs.quantum.ibm.com/api/qiskit/qiskit.synthesis.LieTrotter) class. A first order formula consists of the approximation stated in the introduction, where the matrix exponential of a sum is approximated by a product of matrix exponentials:\n",
+    "The Lie product formula (first-order) is implemented in the [LieTrotter](/docs/api/qiskit/qiskit.synthesis.LieTrotter) class. A first-order formula consists of the approximation stated in the introduction, where the matrix exponential of a sum is approximated by a product of matrix exponentials:\n",
     "\n",
     "$$\n",
     "e^{H_1+H_2} \\approx e^{H_1} e^{H_2}\n",
