--- a/learning/courses/quantum-diagonalization-algorithms/index.mdx
+++ b/learning/courses/quantum-diagonalization-algorithms/index.mdx
@@ -15,8 +15,8 @@ This course is intended for individuals who have some experience with quantum co
 
 We recommend that learners complete the following prerequisites prior to this course:
 
-- Set up your local environment by following along with the [Get started](https://docs.quantum.ibm.com/guides) guide in our documentation page.
-- For deeper understanding of quantum information, try [Basics of Quantum Information](https://quantum.cloud.ibm.com/learning/course/basics-of-quantum-information) with John Watrous.
+- Set up your local environment by following along with the [Get started](/docs/guides/) guide in our documentation page.
+- For deeper understanding of quantum information, try [Basics of Quantum Information](/learning/courses/basics-of-quantum-information) with John Watrous.
 
 ## Exam
 
