--- a/learning/courses/quantum-business-foundations/quantum-technology.mdx
+++ b/learning/courses/quantum-business-foundations/quantum-technology.mdx
@@ -141,16 +141,11 @@ It is not expected that error correction will suddenly replace error mitigation 
 
 ### IBM Quantum Development Roadmap
 
-When we previewed the first development roadmap in 2020, we laid out an ambitious timeline for progressing quantum computing over the proceeding years.
+We are now firmly in the era of quantum utility. That means quantum computers are better at quantum computing than classical computers, and can be leveraged by our users to discover new algorithms and search for quantum advantages. Our roadmap outlines our historic milestones and plans to achieve near-term quantum advantage by 2026
 
-To date, we have met all of these commitments and it is our belief we will continue to do so.
-
-In 2022, we updated our development roadmap to present an ambitious plan for scaling quantum computers beyond old limitations and toward advantage. We put that plan into action, and continue to hit our milestones on schedule through the beginning of 2024.
+By 2029, we will deliver Starling—a large-scale fault-tolerant quantum computer capable of running quantum circuits comprising 100 million quantum gates on 200 logical qubits. We are building this system right now at our historic facility in Poughkeepsie, New York. Learn more about our progress in the [Guided Roadmap PDF.](http://www.ibm.com/downloads/documents/us-en/131cf87ab63319bf)
 
 ![Development Roadmap](/learning/images/courses/quantum-business-foundations/quantum-technology/IBM-Quantum-Development-and-Innovation-Roadmaps.avif)
-
-In 2022, we unveiled the 433-qubit Osprey processor, just one year after breaking the 100-qubit barrier with our 127-qubit Eagle chip.
-In 2023, we delivered the 1,121-qubit Condor processor. These processors push the limits of what can be done with single chip processors and controlling large systems.
 
 Read more about the IBM Quantum development roadmap [here](https://www.ibm.com/quantum/roadmap).
 
