--- a/learning/courses/quantum-diagonalization-algorithms/vqe.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/vqe.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "![An image of atomic orbitals and an image of a network of many nodes and connections between them.](/learning/images/courses/quantum-diagonalization-algorithms/vqe/vqe-fig1.avif)\n",
     "\n",
-    "Mapping a physical or optimization problem to qubits is typically a non-trivial task, but those details are not the focus of this course. A general discussion of mapping a problem to a quantum operator can be found in [Quantum Computing in Practice](https://learning.quantum.ibm.com/course/quantum-computing-in-practice). A more detailed look at the mapping of chemistry problems into quantum operators can be found in [Quantum Chemistry with VQE](https://learning.quantum.ibm.com/course/quantum-chemistry-with-vqe).\n",
+    "Mapping a physical or optimization problem to qubits is typically a non-trivial task, but those details are not the focus of this course. A general discussion of mapping a problem to a quantum operator can be found in [Quantum computing in practice](learning/courses/quantum-computing-in-practice). A more detailed look at the mapping of chemistry problems into quantum operators can be found in [Quantum Chemistry with VQE](/learning/courses/quantum-chemistry-with-vqe).\n",
     "\n",
     "For the purposes of this course, we will assume the form of the Hamiltonian is known. For example, a Hamiltonian for a simple hydrogen molecule (under certain active space assumptions, and using the Jordan-Wigner mapper) is:"
    ]
@@ -908,7 +908,7 @@
    "id": "4be8cb84-ec8c-4c83-880f-b9c296282040",
    "metadata": {},
    "source": [
-    "IBM Quantum has other upskilling offerings related to VQE. If you are ready to put VQE into practice, see our tutorial: [Variational Quantum Eigensolver](https://learning.quantum.ibm.com/tutorial/variational-quantum-eigensolver). If you want more information on creating molecular Hamiltonians, see [this lesson](https://learning.quantum.ibm.com/course/quantum-chemistry-with-vqe/the-hamiltonian) in our course on [Quantum Chemistry with VQE](https://learning.quantum.ibm.com/course/quantum-chemistry-with-vqe). If you are interested in a deeper understanding of how variational algorithms like VQE work, we recommend the course [Variational Algorithm Design](https://learning.quantum.ibm.com/course/variational-algorithm-design/optimization-loops).\n",
+    "IBM Quantum has other upskilling offerings related to VQE. If you are ready to put VQE into practice, see our tutorial: [Variational Quantum Eigensolver](docs/tutorials/variational-quantum-eigensolver). If you want more information on creating molecular Hamiltonians, see [this lesson](/learning/courses/quantum-chemistry-with-vqe/the-hamiltonian) in our course on [Quantum chemistry with VQE](/learning/courses/quantum-chemistry-with-vqe). If you are interested in a deeper understanding of how variational algorithms like VQE work, we recommend the course [Variational Algorithm Design](/learning/courses/variational-algorithm-design/optimization-loops).\n",
     "\n",
     "\n",
     "#### Check-in question\n",
@@ -917,7 +917,7 @@
     "\n",
     "__Answer:__\n",
     "\n",
-    "We would need to introduce variables for inter-atomic spacing, and the angles between bonds. We would need to vary these. For every variation of these, we would produce a new Hamiltonian (since the operators describing the energy certainly depend on the geometry). For each such Hamiltonian produced and mapped onto qubits, we would need to carry out optimization like that done above. Of all those many converged optimization problems, the geometry that produced the lowest energy would be the one adopted by nature. This is quite a bit more involved than what was shown above. Such a calculation is done for the simplest molecule, $\\text{H}_2$, [here](https://learning.quantum.ibm.com/course/quantum-chemistry-with-vqe/application-determining-molecular-geometry)."
+    "We would need to introduce variables for inter-atomic spacing, and the angles between bonds. We would need to vary these. For every variation of these, we would produce a new Hamiltonian (since the operators describing the energy certainly depend on the geometry). For each such Hamiltonian produced and mapped onto qubits, we would need to carry out optimization like that done above. Of all those many converged optimization problems, the geometry that produced the lowest energy would be the one adopted by nature. This is quite a bit more involved than what was shown above. Such a calculation is done for the simplest molecule, $\\text{H}_2$, [here](/learning/courses/quantum-chemistry-with-vqe/application-determining-molecular-geometry)."
    ]
   },
   {
