--- a/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.mdx
+++ b/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.mdx
@@ -210,7 +210,7 @@ People in your organization will see their quantum skills develop rapidly throug
 Progress your own work in collaboration with peers and IBM Quantum experts. Here are a few networking events to keep in mind:
 
 * **The IBM Quantum Developer Conference**: An annual event bringing together developers worldwide to preview forthcoming updates to the IBM Quantum roadmap and get hands-on demos of state-of-the-art IBM Quantum software tools.
-* **The IBM Quantum Partner Forum**: A conference-style gathering of leadership from across the IBM Quantum Network. Partners in the IBM Quantum Network can access the [event recordings](https://learning.quantum.ibm.com/course/ibm-quantum-network-partner-forums).
+* **The IBM Quantum Partner Forum**: A conference-style gathering of leadership from across the IBM Quantum Network.
 
 
 ## Navigate IBM Quantum Resources
