--- a/learning/courses/quantum-diagonalization-algorithms/vqe.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/vqe.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "![An image of atomic orbitals and an image of a network of many nodes and connections between them.](/learning/images/courses/quantum-diagonalization-algorithms/vqe/vqe-fig1.avif)\n",
     "\n",
-    "Mapping a physical or optimization problem to qubits is typically a non-trivial task, but those details are not the focus of this course. A general discussion of mapping a problem to a quantum operator can be found in [Quantum computing in practice](learning/courses/quantum-computing-in-practice). A more detailed look at the mapping of chemistry problems into quantum operators can be found in [Quantum Chemistry with VQE](/learning/courses/quantum-chemistry-with-vqe).\n",
+    "Mapping a physical or optimization problem to qubits is typically a non-trivial task, but those details are not the focus of this course. A general discussion of mapping a problem to a quantum operator can be found in [Quantum computing in practice](/learning/courses/quantum-computing-in-practice). A more detailed look at the mapping of chemistry problems into quantum operators can be found in [Quantum Chemistry with VQE](/learning/courses/quantum-chem-with-vqe).\n",
     "\n",
     "For the purposes of this course, we will assume the form of the Hamiltonian is known. For example, a Hamiltonian for a simple hydrogen molecule (under certain active space assumptions, and using the Jordan-Wigner mapper) is:"
    ]
@@ -908,7 +908,7 @@
    "id": "4be8cb84-ec8c-4c83-880f-b9c296282040",
    "metadata": {},
    "source": [
-    "IBM Quantum has other upskilling offerings related to VQE. If you are ready to put VQE into practice, see our tutorial: [Variational Quantum Eigensolver](docs/tutorials/variational-quantum-eigensolver). If you want more information on creating molecular Hamiltonians, see [this lesson](/learning/courses/quantum-chemistry-with-vqe/the-hamiltonian) in our course on [Quantum chemistry with VQE](/learning/courses/quantum-chemistry-with-vqe). If you are interested in a deeper understanding of how variational algorithms like VQE work, we recommend the course [Variational Algorithm Design](/learning/courses/variational-algorithm-design/optimization-loops).\n",
+    "IBM Quantum has other upskilling offerings related to VQE. If you are ready to put VQE into practice, see our tutorial: [Variational Quantum Eigensolver](/docs/tutorials/variational-quantum-eigensolver). If you want more information on creating molecular Hamiltonians, see [this lesson](/learning/courses/quantum-chem-with-vqe/hamiltonian-construction) in our course on [Quantum chemistry with VQE](/learning/courses/quantum-chem-with-vqe). If you are interested in a deeper understanding of how variational algorithms like VQE work, we recommend the course [Variational Algorithm Design](/learning/courses/variational-algorithm-design/optimization-loops).\n",
     "\n",
     "\n",
     "#### Check-in question\n",
@@ -917,7 +917,7 @@
     "\n",
     "__Answer:__\n",
     "\n",
-    "We would need to introduce variables for inter-atomic spacing, and the angles between bonds. We would need to vary these. For every variation of these, we would produce a new Hamiltonian (since the operators describing the energy certainly depend on the geometry). For each such Hamiltonian produced and mapped onto qubits, we would need to carry out optimization like that done above. Of all those many converged optimization problems, the geometry that produced the lowest energy would be the one adopted by nature. This is quite a bit more involved than what was shown above. Such a calculation is done for the simplest molecule, $\\text{H}_2$, [here](/learning/courses/quantum-chemistry-with-vqe/application-determining-molecular-geometry)."
+    "We would need to introduce variables for inter-atomic spacing, and the angles between bonds. We would need to vary these. For every variation of these, we would produce a new Hamiltonian (since the operators describing the energy certainly depend on the geometry). For each such Hamiltonian produced and mapped onto qubits, we would need to carry out optimization like that done above. Of all those many converged optimization problems, the geometry that produced the lowest energy would be the one adopted by nature. This is quite a bit more involved than what was shown above. Such a calculation is done for the simplest molecule, $\\text{H}_2$, [here](/learning/courses/quantum-chem-with-vqe/geometry)."
    ]
   },
   {
@@ -993,11 +993,11 @@
     "__Quantum subspace configuration interaction (QSCI)__\n",
     "\n",
     "[__Quantum Selected Configuration Interaction (QSCI)__](/docs/guides/qunasys-quri-chemistry)[\\[13\\]](#references) is an algorithm that produces an approximated ground state of a Hamiltonian by sampling a trial wave function to identify the significant computational basis states to generate a subspace for a classical diagonalization.\n",
-    "Both SQD and QSCI use a quantum computer to construct a reduced subspace.  QSCI's additional strength is in its state preparation, especially in the context of chemistry problems. It leverages various strategies such as using time-evolved states [\\[14\\]](#references) and a set of chemistry-inspired ansätze. By focusing on efficient state preparation, QSCI reduces quantum computational costs for chemical Hamiltonians while maintaining high fidelity and leveraging the noise robustness from quantum state sampling techniques [\\[15\\]](#references). QSCI also provides an [adaptive construction technique](/docs/guides/qunasys-quri-chemistry#optimization-based-qsci) which provides more ansätze for a better result.\n",
+    "Both SQD and QSCI use a quantum computer to construct a reduced subspace.  QSCI's additional strength is in its state preparation, especially in the context of chemistry problems. It leverages various strategies such as using time-evolved states [\\[14\\]](#references) and a set of chem-inspired ansätze. By focusing on efficient state preparation, QSCI reduces quantum computational costs for chemical Hamiltonians while maintaining high fidelity and leveraging the noise robustness from quantum state sampling techniques [\\[15\\]](#references). QSCI also provides an [adaptive construction technique](/docs/guides/qunasys-quri-chemistry#optimization-based-qsci) which provides more ansätze for a better result.\n",
     "\n",
     "The default workflow of QSCI for chemistry problem is as follows:\n",
     "* Build the molecular Hamiltonian using your software of choice (such as SciPy).\n",
-    "* Prepare a QSCI algorithm by selecting a proper initial state and a chemistry-inspired ansatz with a pre-selected set of parameters.\n",
+    "* Prepare a QSCI algorithm by selecting a proper initial state and a chem-inspired ansatz with a pre-selected set of parameters.\n",
     "* Sample significant basis states and diagonalize the Hamiltonian using a classical computer to obtain the ground state energy.\n",
     "* Often one uses configuration recovery [\\[16\\]](#references) and symmetry post-selection [\\[15\\]](#references) as a post processing technique.\n",
     "* Optionally, the workflow of adaptive QSCI has an additional optimization loop from step2 to step3, by using more ansätze with a random initial states.\n",
