Address Jules comments on business course (#3354)
closes #3355 

updated course:
https://qiskit.github.io/documentation/pr-3354/learning/courses/quantum-business-foundations/quantum-technology

---------

Co-authored-by: christopherporter1 <125992427+christopherporter1@users.noreply.github.com>
Co-authored-by: abbycross <across@us.ibm.com>
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.mdx
+++ b/learning/courses/quantum-business-foundations/how-to-become-quantum-ready.mdx
@@ -210,24 +210,23 @@ People in your organization will see their quantum skills develop rapidly throug
 Progress your own work in collaboration with peers and IBM Quantum experts. Here are a few networking events to keep in mind:
 
 * **The IBM Quantum Developer Conference**: An annual event bringing together developers worldwide to preview forthcoming updates to the IBM Quantum roadmap and get hands-on demos of state-of-the-art IBM Quantum software tools.
-* **The IBM Quantum Partner Forum**: A conference-style gathering of leadership from across the IBM Quantum Network.
+* **The IBM Quantum Partner Forum**: A conference-style gathering of leadership from across the IBM Quantum Network. Partners in the IBM Quantum Network can access the event recordings.
 
+## Navigate IBM Quantum resources
 
-## Navigate IBM Quantum Resources
-
-Bookmark these pages to ensure you have access to IBM Quantum’s industry-leading resources:
+Bookmark these pages to ensure you have access to these IBM Quantum industry-leading resources:
 
 * [IBM Quantum Computing](https://quantum.cloud.ibm.com/): Login with your IBMid and navigate with the application switcher in the upper right hand corner to explore the suite of applications to support your quantum needs:
-  * [IBM Quantum Platform](https://quantum.cloud.ibm.com/) to access IBM quantum computers on the cloud
-  * [IBM Quantum Learning](/learning) to take a course, follow a learning path, browse tutorials, and start experimenting with Composer
-  * [IBM Quantum Documentation](/docs) to ensure you get the most of the tools and services that IBM has to offer
+  * [IBM Quantum Platform](https://quantum.cloud.ibm.com/) to access an IBM quantum computer on the cloud
+  * [IBM Quantum Learning](/learning) to take a course, explore teaching modules, and start experimenting with Composer (coming soon)
+  * [IBM Quantum Documentation](/docs) to ensure you get the most of IBM tools and services
 * [IBM Research Blog](https://research.ibm.com/blog): Stay up to date with the latest news, research, and events from IBM Research
 * [Qiskit YouTube Channel](https://www.youtube.com/qiskit): Engaging lectures, tips & tricks, tutorials, community updates, and access to exclusive Qiskit content. [Subscribe here](http://ibm.biz/q-subscribe) for weekly Qiskit videos
 
 Join our communities:
 * [Qiskit Slack](http://qisk.it/join-slack): Submit a request to join the Qiskit slack workspace and connect with a community of quantum computing professionals and enthusiasts
 * [Qiskit Stack Exchange](https://quantumcomputing.stackexchange.com/questions/tagged/qiskit): A Q&A platform for engineers, scientist, programmers, and computing professionals interested in quantum computing using Qiskit
-* [IBM Quantum Stack Exchange](https://quantumcomputing.stackexchange.com/questions/tagged/ibm-q-experience): Q&A space on Stack Exchange about IBM's Quantum Service - Circuit Composer
+* [IBM Quantum Stack Exchange](https://quantumcomputing.stackexchange.com/questions/tagged/ibm-q-experience): Q&A space on Stack Exchange about IBM Quantum Service - Circuit Composer
 * [IBM Quantum Events](https://www.ibm.com/quantum/events): Stay updated and take part in upcoming quantum events
 * [IBM Quantum Newsletter](http://ibm.biz/ibm-quantum-network-newsletter): Opt-in to stay tuned on quantum events, available only for the IBM Quantum Network.
 
