Apply suggestions from code review
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
+++ b/docs/migration-guides/classic-iqp-to-cloud-iqp.mdx
@@ -67,9 +67,9 @@ Jobs that were run on IBM Quantum Platform Classic will not be available after t
 
 Follow these steps to start using the new version of IBM Quantum Platform.
 
-1. If you don't already have one, [register for an IBM Cloud account](https://quantum.cloud.ibm.com/registration). If you already have an IBM Quantum Platform account, use the same email for this account.
+1. If you don't already have one, [register for an IBM Cloud account.](https://quantum.cloud.ibm.com/registration) If you already have an IBM Quantum Platform account, use the same email for this account.
 2. Create an instance.
-   1. Log on to the new [IBM Quantum Platform](https://quantum.cloud.ibm.com). Choose **IBMid** and enter your IBM Cloud account information. The dashboard opens.
+   1. Log on to the new [IBM Quantum Platform.](https://quantum.cloud.ibm.com) Choose **IBMid** and enter your IBM Cloud account information. The dashboard opens.
    1. If you do not already have an instance, Click **Create instance** on the dashboard page.
       <Admonition type="note">
       If you have already created an instance, go to your [Instances page](https://quantum.cloud.ibm.com/instances) to create new ones.
