--- a/docs/guides/cloud-setup.mdx
+++ b/docs/guides/cloud-setup.mdx
@@ -173,7 +173,7 @@ You can access quantum processors with REST APIs, enabling you to work with QPUs
 
 Because of the security risks posed by executing code that contains your API key, the recommended authentication method is to first create an environment variable for your API key, but only do so **if you are working in a trusted Python environment (such as on a personal laptop or workstation).**
 
-Follow the **tips for running code on untrusted systems** (below) if you are not using a trusted environment, such as a shared or public computer.
+Follow the **tips for running code on untrusted systems** (in the following) if you are not using a trusted environment, such as a shared or public computer.
 
   1.  To set the IQP_API_TOKEN environment variable in your system, you can add the following line to your shell profile (for example, .bashrc or .zshrc) or by setting it directly in your terminal:
 
