--- a/docs/guides/classical-feedforward-and-control-flow.ipynb
+++ b/docs/guides/classical-feedforward-and-control-flow.ipynb
@@ -60,7 +60,8 @@
     "Each of these methods returns a [context manager](https://docs.python.org/3/reference/datamodel.html#with-statement-context-managers) and is typically used in a `with` statement. In the rest of this guide, we will explain each of these constructs and how to use them.\n",
     "\n",
     "<Admonition type=\"caution\">\n",
-    "  There are some limitations of classical feedforward and control flow operations on quantum hardware that might impact your program. For more information, see [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations).\n",
+    "  - There are some limitations of classical feedforward and control flow operations on quantum hardware that might impact your program. For more information, see [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations).\n",
+    "  - Qiskit Runtime does not support all dynamic circuits features that Qiskit supports.  See the [QASM3 feature table](/docs/guides/qasm-feature-table) to determine which features are supported on Qiskit and Qiskit Runtime.\n",
     "</Admonition>\n",
     "\n",
     "## If statement\n",
@@ -197,6 +198,19 @@
     "circuit.draw(\"mpl\")\n",
     "\n",
     "# example output counts: {'101': 269, '011': 260, '000': 252, '010': 243}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Limitations\n",
+    "\n",
+    "Be aware of the following constraints when using dynamic circuits:\n",
+    "\n",
+    "- Whenever you do a measure followed by an `if (c)`, the values that are measured and subsequently used in the if condition has a limit of **60 bits**. \n",
+    "- Nested conditionals are not allowed.\n",
+    "- Having `reset` inside conditionals is not supported."
    ]
   },
   {
