Generate dev docs Qiskit 2.2.0 - Python

--- a/docs/api/qiskit/dev/qiskit.circuit.library.PhaseOracleGate.mdx
+++ b/docs/api/qiskit/dev/qiskit.circuit.library.PhaseOracleGate.mdx
@@ -8,7 +8,7 @@ python_api_name: qiskit.circuit.library.PhaseOracleGate
 
 # PhaseOracleGate
 
-<Class id="qiskit.circuit.library.PhaseOracleGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/library/phase_oracle.py#L132-L239" signature="qiskit.circuit.library.PhaseOracleGate(expression, var_order=None, label=None)" modifiers="class">
+<Class id="qiskit.circuit.library.PhaseOracleGate" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/library/phase_oracle.py#L141-L252" signature="qiskit.circuit.library.PhaseOracleGate(expression, var_order=None, label=None)" modifiers="class">
   Bases: [`Gate`](qiskit.circuit.Gate "qiskit.circuit.gate.Gate")
 
   Implements a phase oracle.
@@ -27,7 +27,7 @@ $$
 
   **Parameters**
 
-  *   **expression** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – A Python-like boolean expression.
+  *   **expression** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| BooleanExpression*) – A Python-like boolean expression string or a BooleanExpression object.
   *   **var\_order** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")*\[*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")*] | None*) – A list with the order in which variables will be created. (default: by appearance)
   *   **label** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| None*) – A label for the gate to display in visualizations. Per default, the label is set to display the textual represntation of the boolean expression (truncated if needed)
 
@@ -208,7 +208,7 @@ $$
 
   ### from\_dimacs\_file
 
-  <Function id="qiskit.circuit.library.PhaseOracleGate.from_dimacs_file" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/library/phase_oracle.py#L193-L239" signature="from_dimacs_file(filename)" modifiers="classmethod">
+  <Function id="qiskit.circuit.library.PhaseOracleGate.from_dimacs_file" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/library/phase_oracle.py#L206-L252" signature="from_dimacs_file(filename)" modifiers="classmethod">
     Create a PhaseOracle from the string in the DIMACS format.
 
     It is possible to build a PhaseOracle from a file in [DIMACS CNF format](https://web.archive.org/web/20190325181937/https://www.satcompetition.org/2009/format-benchmarks2009.html), which is the standard format for specifying SATisfiability (SAT) problem instances in [Conjunctive Normal Form (CNF)](https://en.wikipedia.org/wiki/Conjunctive_normal_form), which is a conjunction of one or more clauses, where a clause is a disjunction of one or more literals.
