--- a/docs/api/qiskit/dev/circuit.mdx
+++ b/docs/api/qiskit/dev/circuit.mdx
@@ -205,13 +205,13 @@ Some instructions are particularly special in that they affect the control flow 
 
     *   [`BreakLoopOp`](qiskit.circuit.BreakLoopOp "qiskit.circuit.BreakLoopOp"), to break out of the nearest containing loop
     *   [`ContinueLoopOp`](qiskit.circuit.ContinueLoopOp "qiskit.circuit.ContinueLoopOp"), to move immediately to the next iteration of the containing loop
-    *   `BoxOp`, a simple grouping of instructions
+    *   [`BoxOp`](qiskit.circuit.BoxOp "qiskit.circuit.BoxOp"), a simple grouping of instructions
     *   [`ForLoopOp`](qiskit.circuit.ForLoopOp "qiskit.circuit.ForLoopOp"), to loop over a fixed range of values
     *   [`IfElseOp`](qiskit.circuit.IfElseOp "qiskit.circuit.IfElseOp"), to conditionally enter one of two subcircuits
     *   [`SwitchCaseOp`](qiskit.circuit.SwitchCaseOp "qiskit.circuit.SwitchCaseOp"), to conditionally enter one of many subcircuits
     *   [`WhileLoopOp`](qiskit.circuit.WhileLoopOp "qiskit.circuit.WhileLoopOp"), to repeat a subcircuit until a condition is falsified.
 
-Certain instructions can be “annotated” with metadata, which is typically intended to be consumed by a compiler pass either locally, or in later backend processing. Currently this is limited to `BoxOp`. These annotations are represented by custom subclasses of `Annotation`, and there is further discussion of the support infrastructure in [`qiskit.circuit.annotation`](circuit_annotation#module-qiskit.circuit.annotation "qiskit.circuit.annotation").
+Certain instructions can be “annotated” with metadata, which is typically intended to be consumed by a compiler pass either locally, or in later backend processing. Currently this is limited to [`BoxOp`](qiskit.circuit.BoxOp "qiskit.circuit.BoxOp"). These annotations are represented by custom subclasses of [`Annotation`](qiskit.circuit.Annotation "qiskit.circuit.Annotation"), and there is further discussion of the support infrastructure in [`qiskit.circuit.annotation`](circuit_annotation#module-qiskit.circuit.annotation "qiskit.circuit.annotation").
 
 [Circuits can include classical expressions that are evaluated in real time](#circuit-repr-real-time-classical), while the QPU is executing a single shot of the circuit. These are primarily documented in the module documentation of [`qiskit.circuit.classical`](circuit_classical#module-qiskit.circuit.classical "qiskit.circuit.classical"). You might be particularly interested in the base classes (which are not exposed from the [`qiskit.circuit`](#module-qiskit.circuit "qiskit.circuit") root):
 
@@ -468,7 +468,7 @@ Related to measurements, there is a [`Reset`](#qiskit.circuit.Reset "qiskit.circ
   **label** – optional string label of this instruction.
 </Class>
 
-Hardware can be instructed to apply a real-time idle period on a given qubit. A scheduled circuit (see [`qiskit.transpiler`](transpiler#module-qiskit.transpiler "qiskit.transpiler")) will include all the idle times on qubits explicitly in terms of this [`Delay`](#qiskit.circuit.Delay "qiskit.circuit.Delay").
+Hardware can be instructed to apply a real-time idle period on a given qubit. A scheduled circuit (see [`qiskit.transpiler`](transpiler#module-qiskit.transpiler "qiskit.transpiler")) will include all the idle times on qubits explicitly in terms of this [`Delay`](#qiskit.circuit.Delay "qiskit.circuit.Delay"). [`BoxOp`](qiskit.circuit.BoxOp "qiskit.circuit.BoxOp") can also have an explicit duration attached, in its `BoxOp.duration` field.
 
 #### Delay
 
@@ -486,6 +486,8 @@ Hardware can be instructed to apply a real-time idle period on a given qubit. A 
 
   [**CircuitError**](#qiskit.circuit.CircuitError "qiskit.circuit.CircuitError") – A `duration` expression was specified with a resolved type that is not timing-based, or the `unit` was improperly specified.
 </Class>
+
+Delay durations can be specified either with concrete, constant times, or with delayed-resolution “duration expressions” built out of [`expr.Stretch`](circuit_classical#qiskit.circuit.classical.expr.Stretch "qiskit.circuit.classical.expr.Stretch") objects. See [Delayed-resolution scheduling](#circuit-stretches) for more on this.
 
 The [`Barrier`](#qiskit.circuit.Barrier "qiskit.circuit.Barrier") instruction can span an arbitrary number of qubits and clbits, and is a no-op in hardware. During transpilation and optimization, however, it blocks any optimizations from “crossing” the barrier; that is, in:
 
@@ -640,7 +642,7 @@ The [`get_control_flow_name_mapping()`](#qiskit.circuit.get_control_flow_name_ma
   ```
 </Function>
 
-These control-flow operations ([`IfElseOp`](qiskit.circuit.IfElseOp "qiskit.circuit.IfElseOp"), [`WhileLoopOp`](qiskit.circuit.WhileLoopOp "qiskit.circuit.WhileLoopOp"), [`SwitchCaseOp`](qiskit.circuit.SwitchCaseOp "qiskit.circuit.SwitchCaseOp") and [`ForLoopOp`](qiskit.circuit.ForLoopOp "qiskit.circuit.ForLoopOp")) all have specific state that defines the branching conditions and strategies, but contain all the different subcircuit blocks that might be entered in their [`blocks`](qiskit.circuit.ControlFlowOp#blocks "qiskit.circuit.ControlFlowOp.blocks") property.
+These control-flow operations ([`IfElseOp`](qiskit.circuit.IfElseOp "qiskit.circuit.IfElseOp"), [`WhileLoopOp`](qiskit.circuit.WhileLoopOp "qiskit.circuit.WhileLoopOp"), [`SwitchCaseOp`](qiskit.circuit.SwitchCaseOp "qiskit.circuit.SwitchCaseOp"), [`ForLoopOp`](qiskit.circuit.ForLoopOp "qiskit.circuit.ForLoopOp") and [`BoxOp`](qiskit.circuit.BoxOp "qiskit.circuit.BoxOp")) all have specific state that defines the branching conditions and strategies, but contain all the different subcircuit blocks that might be entered in their [`blocks`](qiskit.circuit.ControlFlowOp#blocks "qiskit.circuit.ControlFlowOp.blocks") property.
 
 |                                                                                                             |                                                                                                                                                                                        |
 | ----------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -648,6 +650,7 @@ These control-flow operations ([`IfElseOp`](qiskit.circuit.IfElseOp "qiskit.circ
 | [`WhileLoopOp`](qiskit.circuit.WhileLoopOp "qiskit.circuit.WhileLoopOp")(condition, body\[, label])         | A circuit operation which repeatedly executes a subcircuit (`body`) until a condition (`condition`) evaluates as False.                                                                |
 | [`SwitchCaseOp`](qiskit.circuit.SwitchCaseOp "qiskit.circuit.SwitchCaseOp")(target, cases, \*\[, label])    | A circuit operation that executes one particular circuit block based on matching a given `target` against an ordered list of `values`.                                                 |
 | [`ForLoopOp`](qiskit.circuit.ForLoopOp "qiskit.circuit.ForLoopOp")(indexset, loop\_parameter, body\[, ...]) | A circuit operation which repeatedly executes a subcircuit (`body`) parameterized by a parameter `loop_parameter` through the set of integer values provided in `indexset`.            |
+| [`BoxOp`](qiskit.circuit.BoxOp "qiskit.circuit.BoxOp")(body\[, duration, unit, label, annotations])         | A scoped "box" of operations on a circuit that are treated atomically in the greater context.                                                                                          |
 
 The [`SwitchCaseOp`](qiskit.circuit.SwitchCaseOp "qiskit.circuit.SwitchCaseOp") also understands a special value:
 
@@ -693,6 +696,20 @@ When the low-level construction is being used the inner [`QuantumCircuit`](qiski
 
 Consult [the control-flow construction documentation](qiskit.circuit.QuantumCircuit#circuit-control-flow-methods) for more information on how to build circuits with control flow.
 
+### Instruction-local annotations
+
+<Admonition title="See also" type="note">
+  **[`qiskit.circuit.annotation`](circuit_annotation#module-qiskit.circuit.annotation "qiskit.circuit.annotation")**
+
+  The module-level discussion of the annotation framework, including how to defined custom annotations, and how the system interacts with the compiler and with serialization to other formats.
+</Admonition>
+
+Certain circuit instructions can be “annotated” with instruction-local annotations. As of Qiskit 2.1.0, this is limited to [`BoxOp`](qiskit.circuit.BoxOp "qiskit.circuit.BoxOp"). All annotations are subclasses of one base interface-defining object, but typically represent entirely custom analyses and commands.
+
+|                                                                       |                                           |
+| --------------------------------------------------------------------- | ----------------------------------------- |
+| [`Annotation`](qiskit.circuit.Annotation "qiskit.circuit.Annotation") | An arbitrary annotation for instructions. |
+
 ### Investigating commutation relations
 
 If two operations in a circuit commute, we can swap the order in which they are applied. This can allow for optimizations and simplifications, for example, if it allows to merge or cancel gates:
@@ -710,6 +727,57 @@ Performing these optimizations are part of the transpiler, but the tools to inve
 |                                                                                                       |                                       |
 | ----------------------------------------------------------------------------------------------------- | ------------------------------------- |
 | [`CommutationChecker`](qiskit.circuit.CommutationChecker "qiskit.circuit.CommutationChecker")(\[...]) | Check commutations of two operations. |
+
+<span id="circuit-stretches" />
+
+### Delayed-resolution scheduling
+
+Typically, the output of Qiskit’s compiler cannot be directly executed on a QPU. First, it is likely to pass through some vendor-specific pulse-level compiler, which converts the gates and measurements into signals to the controlling electronics of the QPU. While Qiskit’s [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") can represent *some* of the timing constraints that these pulses will have, it is generally not entirely complete. This is especially true when dynamic circuits (feed-forward operations) are involved; the delays induced by the classical components are often dependent on low-level post-optimization details of backend compilers, and cannot be known by Qiskit.
+
+In these situations, a user can still exert control over the relative scheduling of pulses, such as for dynamical decoupling, by using “stretch” durations. These are constructed by [`QuantumCircuit.add_stretch()`](qiskit.circuit.QuantumCircuit#add_stretch "qiskit.circuit.QuantumCircuit.add_stretch"), and interact with the classical-expression system described in [`qiskit.circuit.classical`](circuit_classical#module-qiskit.circuit.classical "qiskit.circuit.classical"), although they are not real-time mutable.
+
+For example, we can add stretches and boxes to set up a system where two separate dynamic-decoupling sequences are applied to the same qubit, while a pair of other qubits undergoes a delay of unknown duration. The two sequences are constrained to have the same length, even though internally the concrete DD pulses have differing lengths.
+
+```python
+from qiskit import QuantumCircuit
+from qiskit.circuit.classical import expr
+
+qc = QuantumCircuit(3, 3)
+# This sets up three duration "degrees of freedom" that will
+# be resolved later by a backend compiler.
+a = qc.add_stretch("a")
+b = qc.add_stretch("b")
+c = qc.add_stretch("c")
+
+# This set of operations involves feed-forward operations that
+# Qiskit cannot know the length of.
+with qc.box():
+    qc.h(1)
+    qc.cx(1, 2)
+    qc.measure([1, 2], [1, 2])
+    with qc.if_test(expr.equal(qc.clbits[1], qc.clbits[2])):
+        qc.h(1)
+
+# While that stuff is happening to qubits (1, 2), we want
+# qubit 0 to do two different DD sequences.  The two DD
+# sequences are fixed to be the same length as each other,
+# even though they're both internally stretchy.
+with qc.box(duration=a):
+    # Textbook NMRish XX DD.
+    qc.delay(b, 0)
+    qc.x(0)
+    qc.delay(expr.mul(2, b), 0)
+    qc.x(0)
+    qc.delay(b, 0)
+with qc.box(duration=a):
+    # XY4-like DD.
+    for _ in range(2):
+        qc.delay(c, 0)
+        qc.y(0)
+        qc.delay(expr.mul(2, c), 0)
+        qc.x(0)
+        qc.delay(c, 0)
+```
 
 <span id="circuit-custom-gates" />
 
@@ -962,7 +1030,7 @@ $$
    \leftrightarrow \begin{pmatrix} \alpha \\ \beta \end{pmatrix}
 $$
 
-where $\alpha$ and $\beta$ are complex numbers. We store the statevector as a 1D Numpy [`ndarray`](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.2)") with data `sv = [alpha, beta]`, *i.e.* `sv[0] == alpha` and `sv[1] == beta`; note that the indices into the statevector match the ket labels.
+where $\alpha$ and $\beta$ are complex numbers. We store the statevector as a 1D Numpy [`ndarray`](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v2.3)") with data `sv = [alpha, beta]`, *i.e.* `sv[0] == alpha` and `sv[1] == beta`; note that the indices into the statevector match the ket labels.
 
 We construct [the tensor product of two qubit states](https://en.wikipedia.org/wiki/Tensor_product) in matrix algebra using [the Kronecker product](https://en.wikipedia.org/wiki/Kronecker_product), with qubit 0 on the right and qubit 1 on the left, such that the $Z$ basis state $\lvert x\rangle$ (where $x$ is the integer interpretation of the bitstring) has its non-zero term in the statevector `sv` at `sv[x]`:
 
