--- a/docs/api/qiskit/dev/circuit_annotation.mdx
+++ b/docs/api/qiskit/dev/circuit_annotation.mdx
@@ -18,13 +18,13 @@ python_api_name: qiskit.circuit.annotation
 
 This module contains the infrastructure for working with custom circuit annotations.
 
-The main user-facing class is the base class `qiskit.circuit.Annotation`, which is also re-exported from this module.
+The main user-facing class is the base class [`qiskit.circuit.Annotation`](qiskit.circuit.Annotation "qiskit.circuit.Annotation"), which is also re-exported from this module.
 
 <span id="circuit-annotation-subclassing" />
 
 ## Custom annotation subclasses
 
-The `Annotation` class is intended to be subclassed. Subclasses must set their `namespace` field. This can be specific to an instance, or static for an entire subclass. The namespace is used as part of the dispatch mechanism, as described in [Namespacing](#circuit-annotation-namespacing).
+The [`Annotation`](qiskit.circuit.Annotation "qiskit.circuit.Annotation") class is intended to be subclassed. Subclasses must set their [`namespace`](qiskit.circuit.Annotation#namespace "qiskit.circuit.Annotation.namespace") field. This can be specific to an instance, or static for an entire subclass. The namespace is used as part of the dispatch mechanism, as described in [Namespacing](#circuit-annotation-namespacing).
 
 Circuit equality checks also compare annotations on objects in an order-dependent manner. You will likely want to implement the [`__eq__()`](https://docs.python.org/3/reference/datamodel.html#object.__eq__ "(in Python v3.13)") magic method on any subclasses.
 
@@ -42,7 +42,7 @@ A stand-alone function allows iterating through namespaces and parent namespaces
 
 #### iter\_namespaces
 
-<Function id="qiskit.circuit.annotation.iter_namespaces" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/annotation.py#L106-L124" signature="qiskit.circuit.annotation.iter_namespaces(namespace)">
+<Function id="qiskit.circuit.annotation.iter_namespaces" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/annotation.py#L206-L224" signature="qiskit.circuit.annotation.iter_namespaces(namespace)">
   An iterator over all namespaces that can be used to lookup the given namespace.
 
   This includes the namespace and all parents, including the root empty-string namespace.
@@ -69,16 +69,16 @@ A stand-alone function allows iterating through namespaces and parent namespaces
 
 Annotations represent completely custom data, that may persist after compilation. This may include data that should be serialized for later consumption, such as additional data that is interpreted by a backend-compiler. Qiskit’s native binary QPY format (see [`qiskit.qpy`](qpy#module-qiskit.qpy "qiskit.qpy")) supports the concept of arbitrary annotations in its payloads from version 15 onwards. In OpenQASM 3 (see [`qiskit.qasm3`](qasm3#module-qiskit.qasm3 "qiskit.qasm3")), annotations are a core language feature, and Qiskit’s import/export support for OpenQASM 3 includes serialization of annotations.
 
-However, since annotations are generally custom subclasses and unknown to Qiskit, we cannot have built-in support for serialization. On the deserialization front, Qiskit will not, in general, have an existing `Annotation` object to call deserialization methods from. It is also expected that annotations may relate to some unknown-to-Qiskit shared state within a given circuit context.
+However, since annotations are generally custom subclasses and unknown to Qiskit, we cannot have built-in support for serialization. On the deserialization front, Qiskit will not, in general, have an existing [`Annotation`](qiskit.circuit.Annotation "qiskit.circuit.Annotation") object to call deserialization methods from. It is also expected that annotations may relate to some unknown-to-Qiskit shared state within a given circuit context.
 
 For all of these reasons, serialization and deserialization of annotations is handled by custom objects, which must be passed at the interface points of the relevant serialization functions. For example in QPY, the `annotation_factories` argument in [`qpy.dump()`](qpy#qiskit.qpy.dump "qiskit.qpy.dump") and [`qpy.load()`](qpy#qiskit.qpy.load "qiskit.qpy.load") are used to pass serializers.
 
 #### QPYSerializer
 
-<Class id="qiskit.circuit.annotation.QPYSerializer" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/annotation.py#L127-L266" signature="qiskit.circuit.annotation.QPYSerializer" modifiers="class">
+<Class id="qiskit.circuit.annotation.QPYSerializer" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/annotation.py#L227-L366" signature="qiskit.circuit.annotation.QPYSerializer" modifiers="class">
   Bases: [`ABC`](https://docs.python.org/3/library/abc.html#abc.ABC "(in Python v3.13)")
 
-  The interface for serializers and deserializers of `Annotation` objects to QPY.
+  The interface for serializers and deserializers of [`Annotation`](qiskit.circuit.Annotation "qiskit.circuit.Annotation") objects to QPY.
 
   For more information on QPY, see [`qiskit.qpy`](qpy#module-qiskit.qpy "qiskit.qpy").
 
@@ -88,7 +88,7 @@ For all of these reasons, serialization and deserialization of annotations is ha
 
   The structure of calls during serialization of a single circuit is:
 
-  1.  many calls to `dump_annotation()`, which will all share the same `namespace` argument, which will always be a (non-strict) prefix of all the `Annotation` objects given.
+  1.  many calls to `dump_annotation()`, which will all share the same `namespace` argument, which will always be a (non-strict) prefix of all the [`Annotation`](qiskit.circuit.Annotation "qiskit.circuit.Annotation") objects given.
   2.  one call to `dump_state()`.
 
   The general structure of calls during deserialization of a single circuit out of a QPY payload is:
@@ -101,7 +101,7 @@ For all of these reasons, serialization and deserialization of annotations is ha
 
 #### QPYFromOpenQASM3Serializer
 
-<Class id="qiskit.circuit.annotation.QPYFromOpenQASM3Serializer" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/annotation.py#L327-L404" signature="qiskit.circuit.annotation.QPYFromOpenQASM3Serializer(inner)" modifiers="class">
+<Class id="qiskit.circuit.annotation.QPYFromOpenQASM3Serializer" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/annotation.py#L427-L504" signature="qiskit.circuit.annotation.QPYFromOpenQASM3Serializer(inner)" modifiers="class">
   Bases: [`QPYSerializer`](#qiskit.circuit.annotation.QPYSerializer "qiskit.circuit.annotation.QPYSerializer")
 
   An adaptor that converts a [`OpenQASM3Serializer`](#qiskit.circuit.annotation.OpenQASM3Serializer "qiskit.circuit.annotation.OpenQASM3Serializer") into a [`QPYSerializer`](#qiskit.circuit.annotation.QPYSerializer "qiskit.circuit.annotation.QPYSerializer").
@@ -150,13 +150,101 @@ For all of these reasons, serialization and deserialization of annotations is ha
 
 #### OpenQASM3Serializer
 
-<Class id="qiskit.circuit.annotation.OpenQASM3Serializer" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/annotation.py#L269-L324" signature="qiskit.circuit.annotation.OpenQASM3Serializer" modifiers="class">
+<Class id="qiskit.circuit.annotation.OpenQASM3Serializer" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/circuit/annotation.py#L369-L424" signature="qiskit.circuit.annotation.OpenQASM3Serializer" modifiers="class">
   Bases: [`ABC`](https://docs.python.org/3/library/abc.html#abc.ABC "(in Python v3.13)")
 
-  The interface for serializers and deserializers of `Annotation` objects to OpenQASM 3.
+  The interface for serializers and deserializers of [`Annotation`](qiskit.circuit.Annotation "qiskit.circuit.Annotation") objects to OpenQASM 3.
 
   For more information on OpenQASM 3 support in Qiskit, see [`qiskit.qasm3`](qasm3#module-qiskit.qasm3 "qiskit.qasm3").
 
   This interface-definition class is designed to be subclassed. OpenQASM 3 annotations are stateless within a program, therefore a subclass must not track state.
 </Class>
+
+## Examples
+
+### A block-collection transpiler pass
+
+A principal goal of the annotation framework is to allow custom analyses and commands to be stored on circuits in an instruction-local manner, either by the user on entry to the compiler, or for one compiler pass to store information for later consumption.
+
+For example, we can write a simple transpiler pass that collects runs of single-qubit operations, and puts each run into a [`BoxOp`](qiskit.circuit.BoxOp "qiskit.circuit.BoxOp"), the calculates the total unitary action and attaches it as a custom annotation, so the same analysis does not need to be repeated later, even if the internals of each block are optimized.
+
+```python
+from qiskit.circuit import annotation, QuantumCircuit, BoxOp
+from qiskit.quantum_info import Operator
+from qiskit.transpiler import TransformationPass
+
+class PerformsUnitary(annotation.Annotation):
+    namespace = "unitary"
+    def __init__(self, matrix):
+        self.matrix = matrix
+
+class Collect1qRuns(TransformationPass):
+    def run(self, dag):
+        for run in dag.collect_1q_runs():
+            block = QuantumCircuit(1)
+            for node in run:
+                block.append(node.op, [0], [])
+            box = BoxOp(block, annotations=[PerformsUnitary(Operator(block).data)])
+            dag.replace_block_with_op(run, box, {run[0].qargs[0]: 0})
+        return dag
+```
+
+In order to serialize the annotation to OpenQASM 3, we must define custom logic, since the analysis itself is entirely custom. The serialization is separate to the annotation; there may be circumstances in which serialization should be done differently.
+
+```python
+import ast
+import numpy as np
+
+class Serializer(annotation.OpenQASM3Serializer):
+    def dump(self, annotation):
+        if annotation.namespace != "unitary":
+            return NotImplemented
+        line = lambda row: "[" + ", ".join(repr(x) for x in row) + "]"
+        return "[" + ", ".join(line(row) for row in annotation.matrix.tolist()) + "]"
+
+    def load(self, namespace, payload):
+        if namespace != "unitary":
+            return NotImplemented
+        return PerformsUnitary(np.array(ast.literal_eval(payload), dtype=complex))
+```
+
+Finally, this can be put together, showing the output OpenQASM 3.
+
+```python
+from qiskit import qasm3
+
+qc = QuantumCircuit(3)
+qc.s(0)
+qc.t(0)
+qc.y(1)
+qc.x(1)
+qc.h(2)
+qc.s(2)
+collected = Collect1qRuns()(qc)
+
+handlers = {"unitary": Serializer()}
+dumped = qasm3.dumps(collected, annotation_handlers=handlers)
+print(dumped)
+```
+
+```openqasm3
+OPENQASM 3.0;
+include "stdgates.inc";
+qubit[3] q;
+@unitary[[(1+0j), 0j], [0j, (-0.7071067811865475+0.7071067811865475j)]]
+box {
+  s q[0];
+  t q[0];
+}
+@unitary[[1j, 0j], [0j, -1j]]
+box {
+  y q[1];
+  x q[1];
+}
+@unitary[[(0.7071067811865475+0j), (0.7071067811865475+0j)], [0.7071067811865475j, -0.7071067811865475j]]
+box {
+  h q[2];
+  s q[2];
+}
+```
 
