--- a/docs/api/qiskit/dev/qasm3.mdx
+++ b/docs/api/qiskit/dev/qasm3.mdx
@@ -100,7 +100,7 @@ Both of these exporter functions are single-use wrappers around the main [`Expor
 
   *   **experimental** ([*ExperimentalFeatures*](#qiskit.qasm3.ExperimentalFeatures "qiskit.qasm3.ExperimentalFeatures")) – any experimental features to enable during the export. See [`ExperimentalFeatures`](#qiskit.qasm3.ExperimentalFeatures "qiskit.qasm3.ExperimentalFeatures") for more details.
 
-  *   **annotation\_handlers** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")*\[*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")*,* [*OpenQASM3Serializer*](circuit_annotation#qiskit.circuit.annotation.OpenQASM3Serializer "qiskit.circuit.annotation.OpenQASM3Serializer")*] | None*) – a mapping of namespaces to annotation serializers. When an `Annotation` object is encountered, the most specific namespace in this mapping that matches the annotation’s `namespace` attribute will be used to serialize it.
+  *   **annotation\_handlers** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")*\[*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")*,* [*OpenQASM3Serializer*](circuit_annotation#qiskit.circuit.annotation.OpenQASM3Serializer "qiskit.circuit.annotation.OpenQASM3Serializer")*] | None*) – a mapping of namespaces to annotation serializers. When an [`Annotation`](qiskit.circuit.Annotation "qiskit.circuit.Annotation") object is encountered, the most specific namespace in this mapping that matches the annotation’s [`namespace`](qiskit.circuit.Annotation#namespace "qiskit.circuit.Annotation.namespace") attribute will be used to serialize it.
 
   #### dump
 
