--- a/docs/api/qiskit/dev/qiskit.providers.fake_provider.GenericBackendV2.mdx
+++ b/docs/api/qiskit/dev/qiskit.providers.fake_provider.GenericBackendV2.mdx
@@ -160,7 +160,7 @@ python_api_name: qiskit.providers.fake_provider.GenericBackendV2
 
   ### qubit\_properties
 
-  <Function id="qiskit.providers.fake_provider.GenericBackendV2.qubit_properties" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/providers/backend.py#L269-L301" signature="qubit_properties(qubit)">
+  <Function id="qiskit.providers.fake_provider.GenericBackendV2.qubit_properties" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/providers/backend.py#L242-L274" signature="qubit_properties(qubit)">
     Return QubitProperties for a given qubit.
 
     If there are no defined or the backend doesn’t support querying these details this method does not need to be implemented.
@@ -179,7 +179,7 @@ python_api_name: qiskit.providers.fake_provider.GenericBackendV2
 
     **Return type**
 
-    [*QubitProperties*](qiskit.providers.QubitProperties "qiskit.providers.backend.QubitProperties") | [*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")\[[*QubitProperties*](qiskit.providers.QubitProperties "qiskit.providers.backend.QubitProperties")]
+    [*QubitProperties*](qiskit.providers.QubitProperties "qiskit._accelerate.target.QubitProperties") | [*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")\[[*QubitProperties*](qiskit.providers.QubitProperties "qiskit._accelerate.target.QubitProperties")]
   </Function>
 
   ### run
@@ -212,7 +212,7 @@ python_api_name: qiskit.providers.fake_provider.GenericBackendV2
 
   ### set\_options
 
-  <Function id="qiskit.providers.fake_provider.GenericBackendV2.set_options" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/providers/backend.py#L303-L320" signature="set_options(**fields)">
+  <Function id="qiskit.providers.fake_provider.GenericBackendV2.set_options" github="https://github.com/Qiskit/qiskit/tree/main/qiskit/providers/backend.py#L276-L293" signature="set_options(**fields)">
     Set the options fields for the backend
 
     This method is used to update the options of a backend. If you need to change any of the options prior to running just pass in the kwarg with the new value for the options.
