--- a/docs/guides/measure-qubits.ipynb
+++ b/docs/guides/measure-qubits.ipynb
@@ -199,7 +199,7 @@
     "- [`Measure`](/docs/api/qiskit/circuit#qiskit.circuit.Measure) class\n",
     "- [`measure_all`](/docs/api/qiskit/qiskit.circuit.QuantumCircuit#measure_all) method\n",
     "- [`measure_active`](/docs/api/qiskit/qiskit.circuit.QuantumCircuit#measure_active) method\n",
-    "- [`random_circuit`](/docs/api/qiskit/circuit#random_circuit) method\n",
+    "- [`random_circuit`](/docs/api/qiskit/circuit_random#qiskit.circuit.random.random_circuit) method\n",
     "</Admonition>"
    ]
   }
