--- a/docs/api/qiskit-c/dev/qk-target.mdx
+++ b/docs/api/qiskit-c/dev/qk-target.mdx
@@ -12,7 +12,7 @@ python_api_name: QkTarget
 typedef struct QkTarget QkTarget
 ```
 
-A mapping of instructions and properties representing the partiucular constraints of a backend. Its purpose is to provide the compiler with information that allows it to compile an input circuit into another that is optimized taking in consideration the `QkTarget`’s specifications. This structure represents a low level interface to the main Target data structure in Rust, which represents the base class for its Python counterpart, [`Target`](qiskit-transpiler-target#qiskit.transpiler.Target "qiskit.transpiler.Target").
+A mapping of instructions and properties representing the partiucular constraints of a backend. Its purpose is to provide the compiler with information that allows it to compile an input circuit into another that is optimized taking in consideration the `QkTarget`’s specifications. This structure represents a low level interface to the main Target data structure in Rust, which represents the base class for its Python counterpart, [`Target`](/docs/api/qiskit/dev/qiskit.transpiler.Target#qiskit.transpiler.Target "qiskit.transpiler.Target").
 
 Here’s an example of how this structure works:
 
