Update IBM Quantum Cloud registration links (#3366)
Now there is a [`/registration`
route](https://quantum.cloud.ibm.com/registration).

---------

Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -243,7 +243,7 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
 ## Set up to use IBM Cloud
 
 1. Before setting up with IBM Cloud, ensure you are working in an active Python environment with the [Qiskit SDK and Qiskit Runtime installed](./install-qiskit#local).
-1. If you do not already have one, set up an IBM Cloud account from the [IBM Cloud Registration page](https://cloud.ibm.com/registration).
+1. If you do not already have one, set up an IBM Cloud account from the [IBM Cloud Registration page.](https://quantum.cloud.ibm.com/registration)
 1. Create a service instance, if necessary. Open your [IBM Cloud Instances page](https://cloud.ibm.com/quantum/instances). If you have one or more instances shown, continue to the next step. Otherwise, click **Create instance**. When creating your instance you can name it, tag it, select a resource group for it, and select a performance strategy. Next, agree to the license agreements by checking the box in the bottom right corner of the page, and click **Create**.
 
     <Admonition type="note">
