updates from Fran

--- a/docs/guides/quickstart-steps-org.mdx
+++ b/docs/guides/quickstart-steps-org.mdx
@@ -57,21 +57,25 @@ Follow the steps in the appropriate topic, depending on the ID provider you chos
 
 To configure your firewall to enable access to the IBM Quantum API endpoints, add the following URLs to your allowlist:
 
-- IBM Quantum APIs:
+- IBM Cloud global services:
     ```text
-    https://quantum.cloud.ibm.com
-    https://eu-de.quantum.cloud.ibm.com
+    cloud.ibm.com
+    iam.cloud.ibm.com
+    api.global-search-tagging.cloud.ibm.com
+    globalcatalog.cloud.ibm.com
+    resource-controller.cloud.ibm.com
     ```
-- IBM Cloud Platform APIs:
+- IBM Quantum Qiskit Runtime services - region us-east:
     ```text
-    https://cloud.ibm.com
-    https://*.cloud.ibm.com
+    quantum.cloud.ibm.com
+    s3.us-east.cloud-object-storage.appdomain.cloud
     ```
-- IBM Cloud Object Storage for jobs:
+- IBM Quantum Qiskit Runtime services - region eu-de:
     ```text
-    https://*.cloud-object-storage.appdomain.cloud
+    eu-de.quantum.cloud.ibm.com
+    s3.direct.eu-de.cloud-object-storage.appdomain.cloud
     ```
-- Qiskit Functions:
+- IBM Quantum Qiskit Functions preview service:
     ```text
     qiskit-serverless.quantum.ibm.com
     ```
