Fix Krylov tutorial being Heron-specific
Co-authored-by: Mirko Amico <31739486+miamico@users.noreply.github.com>

--- a/docs/tutorials/krylov-quantum-diagonalization.ipynb
+++ b/docs/tutorials/krylov-quantum-diagonalization.ipynb
@@ -872,7 +872,7 @@
    "source": [
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(\n",
-    "    operational=True, simulator=False, min_num_qubits=127\n",
+    "    operational=True, simulator=False, min_num_qubits=156\n",
     ")"
    ]
   },
@@ -910,7 +910,8 @@
     "                    continue\n",
     "\n",
     "for q in cmap_list:\n",
-    "    twoq_gate_err = target[\"cz\"][q].error\n",
+    "    op_name = list(target.operation_names_for_qargs(q))[0]\n",
+    "    twoq_gate_err = target[op_name][q].error\n",
     "    if twoq_gate_err > 0.015:\n",
     "        for q_pair in cmap_list:\n",
     "            if q == q_pair:\n",
