--- a/docs/guides/stretch.mdx
+++ b/docs/guides/stretch.mdx
@@ -11,9 +11,9 @@ Overview:  what is stretch and why is it useful?
 
 Example of using stretch in a dynamic circuit
 
-## Limitiations
+## Limitations
 
-The following contstraints apply when using `stretch`:
+The following constraints apply when using `stretch`:
 
 - At most one stretch variable per _qubit set_ between barriers (implicit and explicit). A qubit set is one or more qubits; these sets must be mutually exclusive.
     Valid:
